--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,18 @@
+buildscript {
+
+    dependencies {
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.5.2"
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.42'
+    }
+}
 
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-    id 'com.android.application' version '7.2.1' apply false
-    id 'com.android.library' version '7.2.1' apply false
+    id 'com.android.application' version '7.2.2' apply false
+    id 'com.android.library' version '7.2.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
-    id 'dagger.hilt.android.plugin' version '2.41' apply false
-    id 'androidx.navigation.safeargs' version '2.4.2' apply false
+    /*id 'dagger.hilt.android.plugin' version '2.41' apply false
+    id 'androidx.navigation.safeargs' version '2.5.1' apply false*/
 }
 
 task clean(type: Delete) {
